# service-tracker

./: .gitignore  build.gradle  sync-native.sh  sync.sh
tracker/: .gitignore  build.gradle
tracker-native/: .gitignore  CMakeLists.txt  build.sh
tracker-native/include/: hack_action.h  utils.h
tracker-native/include/agent/: bypass_hacking.h  interceptor_handler.h  query_thread_handler.h  trace_thread_handler.h  types.h  utils.h
tracker-native/include/base/: encoder.h  hack_action.h  utils.h
tracker-native/include/binder/: driver_types.h  types.h
tracker-native/include/injector/: inject_agent_handler.h  utils.h
tracker-native/include/tcp_client_server/: client.h  client_manager.h  client_observer.h  local_client_manager.h  local_server.h  server.h  server_observer.h  tcp_client_manager.h  tcp_server.h
tracker-native/libs/frida-core-14.0.6/: frida-core.h
tracker-native/libs/frida-core-14.0.6/arm64-v8a/: frida-core.h
tracker-native/libs/frida-core-14.0.6/armeabi-v7a/: frida-core.h
tracker-native/libs/frida-gum-14.0.6/: frida-gum.h
tracker-native/libs/frida-gum-14.0.6/arm64-v8a/: frida-gum.h
tracker-native/libs/frida-gum-14.0.6/armeabi-v7a/: frida-gum.h
tracker-native/src/agent/: bypass_hacking.cpp  interceptor_handler.cpp  query_thread_handler.cpp  server_main.cpp  trace_thread_handler.cpp  types.cpp
tracker-native/src/agent/arch/arm64-v8a/: stalker.cpp
tracker-native/src/agent/arch/armeabi-v7a/: stalker.cpp
tracker-native/src/base/: encoder.cpp  hack_action.cpp  utils.cpp
tracker-native/src/injector/: inject_agent_handler.cpp  server_main.cpp
tracker-native/src/tcp_client_server/: client.cpp  client_manager.cpp  server.cpp  tcp_client.cpp  tcp_server.cpp
tracker/src/main/: AndroidManifest.xml
tracker/src/main/java/io/menya/tracker/: Main.java
tracker/src/main/java/io/menya/tracker/executor/: ServiceMethodCaller.java
tracker/src/main/java/io/menya/tracker/generator/: ArrayGenerator.java  GenerateException.java  ParametersGenerator.java  ValueGenerator.java
tracker/src/main/java/io/menya/tracker/generator/primitive/: BooleanGenerator.java  ByteGenerator.java  CharacterGenerator.java  DoubleGenerator.java  FloatGenerator.java  IntegerGenerator.java  LongGenerator.java  PrimitiveGenerator.java  ShortGenerator.java
tracker/src/main/java/io/menya/tracker/hack/: HackAction.java  InstrumentationManager.java
tracker/src/main/java/io/menya/tracker/hack/agent/: AgentHackAction.java  TraceThreadAction.java
tracker/src/main/java/io/menya/tracker/hack/injector/: InjectAgentAction.java  InjectorHackAction.java
tracker/src/main/java/io/menya/tracker/reflect/: ServiceImplType.java  ServiceInfo.java  ServiceManager.java  ServiceManagerHelper.java
tracker/src/main/java/io/menya/tracker/testing/: Fuzzer.java
tracker/src/main/java/io/menya/tracker/utils/: Action.java  Config.java  Log.java  OptionsHelper.java  ProcessUtils.java  ReflectHelper.java  Utils.java
